fix background z-index

--- a/apps/sps-ordbokene-web/assets/css/tailwind.css
+++ b/apps/sps-ordbokene-web/assets/css/tailwind.css
@@ -237,7 +237,7 @@
 
 
       .wallpaper {
-        @apply md:bg-[url('assets/images/background.webp')] md:mt-5 pb-10 grow bg-cover relative;
+        @apply md:bg-[url('assets/images/background.webp')] md:mt-5 pb-10 grow bg-cover relative z-[-1];
       }
 
 
